--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -61,7 +61,7 @@
     {
       "cell_type": "code",
       "source": [
-       "#updated code\n"
+       "#updated code\n",
         "import pandas as pd"
       ],
       "metadata": {
